z-index repair

--- a/src/app/home/header/header.component.scss
+++ b/src/app/home/header/header.component.scss
@@ -4,7 +4,7 @@
   height: 143px;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 1000000;
   border-bottom: 1px solid #3071ff;
 
   @media screen and (max-width: 456px) {
